--- a/client/src/components/pages/Profile/helpers/SkillList/SkillList.scss
+++ b/client/src/components/pages/Profile/helpers/SkillList/SkillList.scss
@@ -1,4 +1,3 @@
 .skill-list {
   list-style: none;
-  margin-bottom: 2.5em;
 }
